<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ben.inventreecompanion</groupId>
    <artifactId>InventreeCompanion</artifactId>
    <version>beta_0.6.3</version>
    <packaging>jar</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- Custom build -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                  <archive>
                    <manifest>
                      <addClasspath>true</addClasspath>
                      <mainClass>ben.inventreecompanion.InventreeCompanion</mainClass>
                    </manifest>
                  </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.3.0</version>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                        <execution>
                                <id>copy-dependencies</id>
                                <phase>prepare-package</phase>
                                <goals>
                                        <goal>copy-dependencies</goal>
                                </goals>
                                <configuration>
                                        <outputDirectory>${project.build.directory}/libs</outputDirectory>
                                        <overWriteReleases>false</overWriteReleases>
                                        <overWriteSnapshots>false</overWriteSnapshots>
                                        <overWriteIfNewer>true</overWriteIfNewer>
                                </configuration>
                        </execution>
                        <execution>
                          <id>build-classpath</id>
                          <phase>generate-sources</phase>
                          <goals>
                            <goal>build-classpath</goal>
                          </goals>
                          <configuration>

                          </configuration>
                        </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                  <execution>
                    <phase>package</phase>
                    <goals>
                      <goal>shade</goal>
                    </goals>
                  </execution>
                </executions>
            </plugin>
            
            <!-- FOR BUNDLE MAC OS APP 
            https://github.com/shnmkhk/zeronoise/blob/master/pom.xml
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                  <execution>
                    <phase>package</phase>
                    <goals>
                      <goal>run</goal>
                    </goals>
                    <configuration>
                      <target>
                          <taskdef name="jarbundler" classname="com.ultramixer.jarbundler.JarBundler"/>
                          <jarbundler dir="${project.build.directory}"
                            name="InventreeCompanion-${project.version}"
                            mainclass="ben.inventreecompanion.InventreeCompanion"
                            jar="${project.build.directory}/${project.artifactId}-${project.version}.jar"
                            icon="icons/Barcode-Scanner.ico"/>
                          <property name="launch4j.dir" location="C:\Program Files (x86)\Launch4j" />
                          <taskdef name="launch4j" 
                                    classname="net.sf.launch4j.ant.Launch4jTask" 
                                    classpath="${launch4j.dir}/launch4j.jar:${launch4j.dir}/lib/xstream.jar" />
                            <launch4j>
                                <config headerType="gui" outfile="${project.build.directory}/${project.artifactId}-${project.version}_win32_64.exe"
                                        dontWrapJar="false" jarPath="${project.build.directory}/${project.artifactId}-${project.version}.jar"
                                        jar="${project.build.directory}/${project.artifactId}-${project.version}.jar"
                                        chdir="." priority="normal"
                                        downloadUrl="http://java.com/download"
                                        stayAlive="true" restartOnCrash="false"
                                        icon="icons/Barcode-Scanner.ico" >
                                    <jre bundledJre64Bit="false" bundledJreAsFallback="false"
                                         minVersion="1.7.0" maxVersion="" jdkPreference="preferJre"
                                         runtimeBits="64/32" />
                                    <versionInfo productVersion="0.0.3.0"
                                                 txtProductVersion="0.0.3.0"
                                                 fileVersion="0.0.3.0"
                                                 txtFileVersion="0.0.3.0"
                                                 copyright="Bben"
                                                 fileDescription="Inventree Companion tool"
                                                 productName="InventreeCompanion"
                                                 companyName="Bben Corp"
                                                 internalName="IVC"
                                                 originalFilename="${project.artifactId}-${project.version}.exe" />
                                </config>
                            </launch4j>
                            
                            <zip basedir="${project.build.directory}" 
                                 destfile="${project.build.directory}/InventreeCompanion-${project.version}_macos.zip" 
                                 includes="InventreeCompanion-${project.version}.app/**"
                            />
                            <delete dir="${project.build.directory}/InventreeCompanion-${project.version}.app"/>


                      </target>
                    </configuration>
                  </execution>
                </executions>
                <dependencies>
                        <dependency>
                                <groupId>com.ultramixer.jarbundler</groupId>
                                <artifactId>jarbundler-core</artifactId>
                                <version>3.3.0</version>
                        </dependency>
                        <dependency>
                            <groupId>net.sf.launch4j</groupId>
                            <artifactId>launch4j</artifactId>
                            <version>3.14</version>
                        </dependency>
                </dependencies>
          </plugin>
            <!-- END BUNDLE MAC OS APP -->
      <!-- end custom -->
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.google.collections</groupId>
            <artifactId>google-collections</artifactId>
            <version>1.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.ini4j</groupId>
            <artifactId>ini4j</artifactId>
            <version>0.5.4</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.jcabi</groupId>
            <artifactId>jcabi-http</artifactId>
            <version>1.18.2</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-client</artifactId>
            <version>2.25.1</version>
        </dependency>
        <dependency>
            <groupId>org.JSON</groupId>
            <artifactId>JSON</artifactId>
            <version>20220320</version>
            <type>jar</type>
        </dependency>
        <!--  FOR LOGGING SLF4J -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>2.0.0-alpha0</version>
            <scope>runtime</scope>
        </dependency>
        <!-- NO Log dessous
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>1.7.36</version>
        </dependency> -->

        <dependency>
            <groupId>javax.json</groupId>
            <artifactId>javax.json-api</artifactId>
            <version>1.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.shared</groupId>
            <artifactId>maven-shared-utils</artifactId>
            <version>3.1.0</version>
            <type>jar</type>
        </dependency>
        <!-- FOR JavaFX libs -->
        <!--
        <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>11</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-media</artifactId>
                <version>11</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>11</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>11</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-swing</artifactId>
                <version>11</version>
            </dependency>
         -->
        <!-- fin JavaFX -->
        
        <!-- FOR JDatePicker -->
        <dependency>
            <groupId>net.sourceforge.jdatepicker</groupId>
            <artifactId>jdatepicker</artifactId>
            <version>1.3.2</version>
        </dependency>
        <!-- FIN JDatePicker -->
        <!-- FOR EXPORT CSV -->
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>4.1</version>
        </dependency>
        <!-- FIN EXPORT CSV -->
        <!-- FOR EXPORT EXCEL -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>5.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
              <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <!-- FIN EXPORT CSV -->
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <exec.mainClass>ben.inventreecompanion.InventreeCompanion</exec.mainClass>
    </properties>
</project>